fixed browser overflow

--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
 	margin: 0;
 	padding: 0;
 }
-
+html,body
+{
+    overflow-x: hidden; 
+}
 body{
-	font-family: "Work Sans"
+	font-family: "Work Sans";
 }
 
 section{
@@ -15,15 +18,14 @@ ul{
 	top: 0;
 	width: 100%;
 	list-style: none;
-	padding: 0;
+	padding: 20px 0px 40px 0px;
 	margin: 0;
-	padding-top: 20px;
 	background-color: #CDEDFD;
-	padding-bottom: 40px;
+
 }
 li {
 	float: right;
-	padding-right: 25px;
+	padding-right: 50px;
 
 
 }
@@ -41,6 +43,7 @@ li a:hover{
 #welcome {
 	padding-top:100px;
 	height:100vh;
+
 	background-color: #CDEDFD;
 
 }
@@ -75,16 +78,12 @@ li a:hover{
 	top: 10px;
 	font-size: 18px;
 }
-@media only screen and (max-width: 500px) {
-	#webdev, #welcome-intro #skills, #welcome-intro #intro{
-		left: 80px;
-	}
-}
+
 #about {
 	padding:100px 50px;
 }
 #graphic {
-		float: left;
+	float: left;
 	width: 300px;
 }
 #graphic h1{
